// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchForm /> check how renders should render with icon in button if width is lower than 900px 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 45rem;
}

.c0 .name-input {
  background-color: #FAFAFA;
  border: 1px solid #BFBFBF;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem;
  width: 100%;
}

.c1 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c1:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c2 > svg {
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  fill: #fff;
  width: 1.7rem;
  height: 1.7rem;
}

@media only screen and (max-width:37.5em) {
  .c0 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<form
    class="c0"
  >
    <input
      autocomplete="off"
      class="name-input"
      data-testid="SearchForm-input"
      maxlength="150"
      name="product"
      spellcheck="false"
      type="text"
      value=""
    />
    <button
      aria-label="Search"
      class="c1"
      color="blue"
      type="submit"
    >
      <div
        class="c2"
        color="#fff"
      >
        <svg>
          search.svg
        </svg>
      </div>
    </button>
  </form>
</DocumentFragment>
`;

exports[`<SearchForm /> check how renders should render with text in button if width is equal or greater than 900px 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: 45rem;
}

.c0 .name-input {
  background-color: #FAFAFA;
  border: 1px solid #BFBFBF;
  font-size: 1.5rem;
  outline: none;
  padding: 0.8rem;
  width: 100%;
}

.c1 {
  box-shadow: 0 0 3px rgba(0,0,0,0.03);
  border-radius: 1px;
  cursor: pointer;
  font-size: 1.4rem;
  font-weight: 700;
  line-height: 1.2;
  -webkit-letter-spacing: 2px;
  -moz-letter-spacing: 2px;
  -ms-letter-spacing: 2px;
  letter-spacing: 2px;
  outline: none;
  padding: 0.8rem 1.2rem;
  position: relative;
  text-align: center;
  text-transform: uppercase;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  background-color: #1E8BC3;
  border: 2px solid #1E8BC3;
  color: #fff;
}

.c1:hover {
  background-color: #22A7F0;
  border-color: #22A7F0;
}

@media only screen and (max-width:37.5em) {
  .c0 {
    -webkit-order: 2;
    -ms-flex-order: 2;
    order: 2;
  }
}

<form
    class="c0"
  >
    <input
      autocomplete="off"
      class="name-input"
      data-testid="SearchForm-input"
      maxlength="150"
      name="product"
      spellcheck="false"
      type="text"
      value=""
    />
    <button
      aria-label="Search"
      class="c1"
      color="blue"
      type="submit"
    >
      search
    </button>
  </form>
</DocumentFragment>
`;
